fixed navbar / header responsive layout on collapse; also fixed background home page slideshow text size; also fixed issue with playercontrols in navbar responsive layout on collapse

--- a/client/stylesheets/style.css
+++ b/client/stylesheets/style.css
@@ -23,10 +23,19 @@ body {
 }
 
 .navbar {
-  margin-bottom: 10px; }
-  /* line 32, ../sass/style.scss */
-  .navbar .navbar-inner {
-    border-radius: 0px 0px 3px 3px; }
+  margin-bottom: 10px;
+
+}
+
+.vidControls li{
+  display:inline-block;
+  white-space:nowrap;
+  float: left;
+}
+
+/* line 32, ../sass/style.scss */
+.navbar .navbar-inner {
+  border-radius: 0px 0px 3px 3px; }
 
 #spinner {
   height: 300px; }
@@ -298,6 +307,7 @@ ul.horizontal-slide li[class*="span"] {
   height: 20px;
   width: 300px;
 }
+
 #progBar {
   width: 0px;
   height: 100%;
